[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Planet Slime Server Software"
scroll_active = false

[node name="LimitPlayers" type="CheckBox" parent="."]
margin_left = 3.0
margin_top = 16.0
margin_right = 116.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
pressed = true
text = "No duplicate colours"

[node name="Log" type="CheckBox" parent="."]
margin_left = 103.0
margin_top = 16.0
margin_right = 153.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Log"

[node name="Seed" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 56.0
rect_scale = Vector2( 0.5, 0.5 )
placeholder_text = "Seed"

[node name="StartHosting" type="Button" parent="."]
margin_left = 8.0
margin_top = 43.0
margin_right = 176.0
margin_bottom = 63.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Open Connection"

[node name="StopHosting" type="Button" parent="."]
margin_left = 8.0
margin_top = 53.0
margin_right = 176.0
margin_bottom = 73.0
rect_scale = Vector2( 0.5, 0.5 )
disabled = true
text = "Close Connection"

[node name="ConnectionID" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 66.0
margin_right = 176.0
margin_bottom = 81.0
rect_scale = Vector2( 0.5, 0.5 )
text = "SlimeID:"
fit_content_height = true
scroll_active = false

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 48, 40 )
current = true
zoom = Vector2( 0.194, 0.25 )

[connection signal="pressed" from="StartHosting" to="." method="_on_StartHosting_pressed"]
[connection signal="pressed" from="StopHosting" to="." method="_on_StopHosting_pressed"]
